misc/homepage/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: "vault-issuer"
    cert-manager.io/common-name: "home.hk.home"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - home.hk.home
      secretName: homepage-cert
  rules:
    - host: home.hk.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
